parser.output
   0  $accept : %entry% $end

   1  program : func_decl_list EOF

   2  func_decl_list :
   3                 | func_decl_list func_decl

   4  obj_list : typ ID
   5           | obj_list COMMA ID

   6  stmt : expr END
   7       | REPEAT expr COLON loop_stmt_list ENDREPEAT
   8       | FOR ID IN expr COLON loop_stmt_list ENDFOR
   9       | IF expr COLON stmt_list ENDIF otherwiseif_list
  10       | IF expr COLON stmt_list ENDIF otherwiseif_list OTHERWISE COLON stmt_list ENDOTHERWISE
  11       | DISPLAY expr END
  12       | OBJECT obj_list END
  13       | OUTPUT END
  14       | OUTPUT expr END

  15  stmt_list :
  16            | stmt_list stmt

  17  loop_stmt_list :
  18                 | loop_stmt_list loop_stmt

  19  loop_stmt : stmt
  20            | PASS END
  21            | CONTINUE END

  22  otherwiseif_list :
  23                   | otherwiseif_list otherwiseif_stmt

  24  otherwiseif_stmt : OTHERWISEIF expr COLON stmt_list ENDOTHERWISEIF

  25  expr : literal
  26       | arith_op
  27       | bool_op
  28       | LBRACKET qweb_list RBRACKET
  29       | list_op
  30       | html_op
  31       | obj_op
  32       | typ ID
  33       | ID ASSIGN expr
  34       | LPAREN expr RPAREN
  35       | LBRACE dict RBRACE
  36       | ID LPAREN actuals_opt RPAREN

  37  arith_op : MINUS expr
  38           | expr PLUS expr
  39           | expr MINUS expr
  40           | expr TIMES expr
  41           | expr DIVIDE expr

  42  bool_op : NOT expr
  43          | expr EQ expr
  44          | expr NEQ expr
  45          | expr LT expr
  46          | expr LEQ expr
  47          | expr GT expr
  48          | expr GEQ expr
  49          | expr AND expr
  50          | expr OR expr

  51  qweb_list :
  52            | expr
  53            | qweb_list COMMA expr

  54  dict :
  55       | expr COLON expr
  56       | dict COMMA expr COLON expr

  57  list_op : expr DOT APPEND LPAREN expr RPAREN
  58          | expr DOT REMOVE LPAREN expr RPAREN
  59          | expr DOT LENGTH LPAREN RPAREN

  60  html_op : expr DOT CREATEHEADER LPAREN expr RPAREN
  61          | expr DOT CREATEPARAGRAPH LPAREN expr RPAREN
  62          | expr DOT CREATETABLE LPAREN expr RPAREN
  63          | expr DOT CREATEUNORDEREDLIST LPAREN expr RPAREN

  64  obj_op : expr DOT ID
  65         | expr DOT ID ASSIGN expr

  66  func_decl : FUNCTION ID LPAREN formal_opt RPAREN COLON stmt_list END

  67  actuals_opt :
  68              | actuals_list

  69  actuals_list : expr
  70               | actuals_list COMMA expr

  71  formal_opt :
  72             | formal_list

  73  formal_list : typ ID
  74              | formal_list COMMA typ ID

  75  typ : INT
  76      | BOOL
  77      | FLOAT
  78      | CHAR
  79      | RECT
  80      | CIRC
  81      | TRI
  82      | SQRE
  83      | ELPS
  84      | POLY
  85      | POINT
  86      | LINE

  87  literal : INT_LITERAL
  88          | STRING_LITERAL
  89          | BOOL_LITERAL
  90          | FLOAT_LITERAL

  91  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (91)
	func_decl_list : .  (2)

	.  reduce 2

	program  goto 3
	func_decl_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (91)

	.  reduce 91


state 4
	program : func_decl_list . EOF  (1)
	func_decl_list : func_decl_list . func_decl  (3)

	FUNCTION  shift 5
	EOF  shift 6
	.  error

	func_decl  goto 7


state 5
	func_decl : FUNCTION . ID LPAREN formal_opt RPAREN COLON stmt_list END  (66)

	ID  shift 8
	.  error


state 6
	program : func_decl_list EOF .  (1)

	.  reduce 1


state 7
	func_decl_list : func_decl_list func_decl .  (3)

	.  reduce 3


state 8
	func_decl : FUNCTION ID . LPAREN formal_opt RPAREN COLON stmt_list END  (66)

	LPAREN  shift 9
	.  error


state 9
	func_decl : FUNCTION ID LPAREN . formal_opt RPAREN COLON stmt_list END  (66)
	formal_opt : .  (71)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	RPAREN  reduce 71

	typ  goto 22
	formal_opt  goto 23
	formal_list  goto 24


state 10
	typ : INT .  (75)

	.  reduce 75


state 11
	typ : BOOL .  (76)

	.  reduce 76


state 12
	typ : FLOAT .  (77)

	.  reduce 77


state 13
	typ : CHAR .  (78)

	.  reduce 78


state 14
	typ : RECT .  (79)

	.  reduce 79


state 15
	typ : CIRC .  (80)

	.  reduce 80


state 16
	typ : TRI .  (81)

	.  reduce 81


state 17
	typ : SQRE .  (82)

	.  reduce 82


state 18
	typ : ELPS .  (83)

	.  reduce 83


state 19
	typ : POLY .  (84)

	.  reduce 84


state 20
	typ : POINT .  (85)

	.  reduce 85


state 21
	typ : LINE .  (86)

	.  reduce 86


state 22
	formal_list : typ . ID  (73)

	ID  shift 25
	.  error


state 23
	func_decl : FUNCTION ID LPAREN formal_opt . RPAREN COLON stmt_list END  (66)

	RPAREN  shift 26
	.  error


state 24
	formal_opt : formal_list .  (72)
	formal_list : formal_list . COMMA typ ID  (74)

	COMMA  shift 27
	RPAREN  reduce 72


state 25
	formal_list : typ ID .  (73)

	.  reduce 73


state 26
	func_decl : FUNCTION ID LPAREN formal_opt RPAREN . COLON stmt_list END  (66)

	COLON  shift 28
	.  error


state 27
	formal_list : formal_list COMMA . typ ID  (74)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	.  error

	typ  goto 29


state 28
	func_decl : FUNCTION ID LPAREN formal_opt RPAREN COLON . stmt_list END  (66)
	stmt_list : .  (15)

	.  reduce 15

	stmt_list  goto 30


state 29
	formal_list : formal_list COMMA typ . ID  (74)

	ID  shift 31
	.  error


state 30
	stmt_list : stmt_list . stmt  (16)
	func_decl : FUNCTION ID LPAREN formal_opt RPAREN COLON stmt_list . END  (66)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	DISPLAY  shift 36
	OUTPUT  shift 37
	IF  shift 38
	FOR  shift 39
	REPEAT  shift 40
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	END  shift 42
	OBJECT  shift 43
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	stmt  goto 50
	expr  goto 51
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 31
	formal_list : formal_list COMMA typ ID .  (74)

	.  reduce 74


state 32
	expr : LPAREN . expr RPAREN  (34)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 58
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 33
	expr : LBRACE . dict RBRACE  (35)
	dict : .  (54)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	RBRACE  reduce 54
	COMMA  reduce 54

	typ  goto 49
	expr  goto 59
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57
	dict  goto 60


state 34
	arith_op : MINUS . expr  (37)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 61
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 35
	bool_op : NOT . expr  (42)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 62
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 36
	stmt : DISPLAY . expr END  (11)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 63
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 37
	stmt : OUTPUT . END  (13)
	stmt : OUTPUT . expr END  (14)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	END  shift 64
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 65
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 38
	stmt : IF . expr COLON stmt_list ENDIF otherwiseif_list  (9)
	stmt : IF . expr COLON stmt_list ENDIF otherwiseif_list OTHERWISE COLON stmt_list ENDOTHERWISE  (10)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 66
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 39
	stmt : FOR . ID IN expr COLON loop_stmt_list ENDFOR  (8)

	ID  shift 67
	.  error


state 40
	stmt : REPEAT . expr COLON loop_stmt_list ENDREPEAT  (7)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	.  error

	typ  goto 49
	expr  goto 68
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 41
	expr : LBRACKET . qweb_list RBRACKET  (28)
	qweb_list : .  (51)

	LPAREN  shift 32
	LBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	LBRACKET  shift 41
	ID  shift 44
	INT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	BOOL_LITERAL  shift 47
	FLOAT_LITERAL  shift 48
	COMMA  reduce 51
	RBRACKET  reduce 51

	typ  goto 49
	expr  goto 69
	literal  goto 52
	arith_op  goto 53
	bool_op  goto 54
	qweb_list  goto 70
	list_op  goto 55
	html_op  goto 56
	obj_op  goto 57


state 42
	func_decl : FUNCTION ID LPAREN formal_opt RPAREN COLON stmt_list END .  (66)

	.  reduce 66


state 43
	stmt : OBJECT . obj_list END  (12)

	INT  shift 10
	BOOL  shift 11
	FLOAT  shift 12
	CHAR  shift 13
	RECT  shift 14
	CIRC  shift 15
	TRI  shift 16
	SQRE  shift 17
	ELPS  shift 18
	POLY  shift 19
	POINT  shift 20
	LINE  shift 21
	.  error

	obj_list  goto 71
	typ  goto 72


state 44
	expr : ID . ASSIGN expr  (33)
	expr : ID . LPAREN actuals_opt RPAREN  (36)

	LPAREN  shift 73
	ASSIGN  shift 74
	.  error


state 45
	literal : INT_LITERAL .  (87)

	.  reduce 87


state 46
	literal : STRING_LITERAL .  (88)

	.  reduce 88


state 47
	literal : BOOL_LITERAL .  (89)

	.  reduce 89


state 48
	literal : FLOAT_LITERAL .  (90)

	.  reduce 90


state 49
	expr : typ . ID  (32)

	ID  shift 75
	.  error


state 50
	stmt_list : stmt_list stmt .  (16)

	.  reduce 16


state 51
	stmt : expr . END  (6)
	arith_op : expr . PLUS expr  (38)
	arith_op : expr . MINUS expr  (39)
	arith_op : expr . TIMES expr  (40)
	arith_op : expr . DIVIDE expr  (41)
	bool_op : expr . EQ expr  (43)
	bool_op : expr . NEQ expr  (44)
	bool_op : expr . LT expr  (45)
	bool_op : expr . LEQ expr  (46)
	bool_op : expr . GT expr  (47)
	bool_op : expr . GEQ expr  (48)
	bool_op : expr . AND expr  (49)
	bool_op : expr . OR expr  (50)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (57)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (58)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (59)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (60)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (61)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (62)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (63)
	obj_op : expr . DOT ID  (64)
	obj_op : expr . DOT ID ASSIGN expr  (65)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	DOT  shift 88
	END  shift 89
	.  error


state 52
	expr : literal .  (25)

	.  reduce 25


state 53
	expr : arith_op .  (26)

	.  reduce 26


state 54
	expr : bool_op .  (27)

	.  reduce 27


state 55
	expr : list_op .  (29)

	.  reduce 29


state 56
	expr : html_op .  (30)

	.  reduce 30


state 57
	expr : obj_op .  (31)

	.  reduce 31


state 58
	expr : LPAREN expr . RPAREN  (34)
	arith_op : expr . PLUS expr  (38)
	arith_op : expr . MINUS expr  (39)
	arith_op : expr . TIMES expr  (40)
	arith_op : expr . DIVIDE expr  (41)
	bool_op : expr . EQ expr  (43)
	bool_op : expr . NEQ expr  (44)
	bool_op : expr . LT expr  (45)
	bool_op : expr . LEQ expr  (46)
	bool_op : expr . GT expr  (47)
	bool_op : expr . GEQ expr  (48)
	bool_op : expr . AND expr  (49)
	bool_op : expr . OR expr  (50)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (57)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (58)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (59)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (60)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (61)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (62)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (63)
	obj_op : expr . DOT ID  (64)
	obj_op : expr . DOT ID ASSIGN expr  (65)

	RPAREN  shift 90
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	DOT  shift 88
	.  error


state 59
	arith_op : expr . PLUS expr  (38)
	arith_op : expr . MINUS expr  (39)
	arith_op : expr . TIMES expr  (40)
	arith_op : expr . DIVIDE expr  (41)
	bool_op : expr . EQ expr  (43)
	bool_op : expr . NEQ expr  (44)
	bool_op : expr . LT expr  (45)
	bool_op : expr . LEQ expr  (46)
	bool_op : expr . GT expr  (47)
	bool_op : expr . GEQ expr  (48)
	bool_op : expr . AND expr  (49)
	bool_op : expr . OR expr  (50)
	dict : expr . COLON expr  (55)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (57)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (58)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (59)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (60)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (61)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (62)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (63)
	obj_op : expr . DOT ID  (64)
	obj_op : expr . DOT ID ASSIGN expr  (65)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	COLON  shift 91
	DOT  shift 88
	.  error


state 60
	expr : LBRACE dict . RBRACE  (35)
	dict : dict . COMMA expr COLON expr  (56)

	RBRACE  shift 92
	COMMA  shift 93
	.  error


state 61
	arith_op : MINUS expr .  (37)
	arith_op : expr . PLUS expr  (38)
	arith_op : expr . MINUS expr  (39)
	arith_op : expr . TIMES expr  (40)
	arith_op : expr . DIVIDE expr  (41)
	bool_op : expr . EQ expr  (43)
	bool_op : expr . NEQ expr  (44)
	bool_op : expr . LT expr  (45)
	bool_op : expr . LEQ expr  (46)
	bool_op : expr . GT expr  (47)
	bool_op : expr . GEQ expr  (48)
	bool_op : expr . AND expr  (49)
	bool_op : expr . OR expr  (50)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (57)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (58)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (59)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (60)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (61)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (62)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (63)
	obj_op : expr . DOT ID  (64)
	obj_op : expr . DOT ID ASSIGN expr  (65)

	TIMES  shift 78
	DIVIDE  shift 79
	DOT  shift 88
	RPAREN  reduce 37
	RBRACE  reduce 37
	COMMA  reduce 37
	PLUS  reduce 37
	MINUS  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	LT  reduce 37
	LEQ  reduce 37
	GT  reduce 37
	GEQ  reduce 37
	AND  reduce 37
	OR  reduce 37
	RBRACKET  reduce 37
	COLON  reduce 37
	END  reduce 37


state 62
	arith_op : expr . PLUS expr  (38)
	arith_op : expr . MINUS expr  (39)
	arith_op : expr . TIMES expr  (40)
	arith_op : expr . DIVIDE expr  (41)
	bool_op : NOT expr .  (42)
	bool_op : expr . EQ expr  (43)
	bool_op : expr . NEQ expr  (44)
	bool_op : expr . LT expr  (45)
	bool_op : expr . LEQ expr  (46)
	bool_op : expr . GT expr  (47)
	bool_op : expr . GEQ expr  (48)
	bool_op : expr . AND expr  (49)
	bool_op : expr . OR expr  (50)
	list_op : expr . DOT APPEND LPAREN expr RPAREN  (57)
	list_op : expr . DOT REMOVE LPAREN expr RPAREN  (58)
	list_op : expr . DOT LENGTH LPAREN RPAREN  (59)
	html_op : expr . DOT CREATEHEADER LPAREN expr RPAREN  (60)
	html_op : expr . DOT CREATEPARAGRAPH LPAREN expr RPAREN  (61)
	html_op : expr . DOT CREATETABLE LPAREN expr RPAREN  (62)
	html_op : expr . DOT CREATEUNORDEREDLIST LPAREN expr RPAREN  (63)
	obj_op : expr . DOT ID  (64)
	obj_op : expr . DOT ID ASSIGN expr  (65)

	DOT  shift 88
	RPAREN  reduce 42
	RBRACE  reduce 42
	COMMA  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	TIMES  reduce 42
	DIVIDE  reduce 42
	EQ  reduce 42
	NEQ  reduce 42
	LT  reduce 42
	LEQ  reduce 42
	GT  reduce 42
	GEQ  reduce 42
	AND  reduce 42
	OR  reduce 42
	RBRACKET  reduce 42
	COLON  reduce 42
	END  reduce 42

